# gm-llm

./: .gitignore  HANDOFF.md  ORCHESTRATOR.md  PLAN.md  README.md  REFACTOR.md  SPEC.md  install.ps1  package-lock.json  pyproject.toml
agent/: arc-builder.md  arc-designer.md  campaign-analyst.md  character-importer.md  dm-runner.md  dm.md  log-extractor.md  narrative-checker.md  player.md  rules-checker.md  session-planner.md  world-builder.md
dev/: MAINTAINING.md  autoplay.py  cli.py  dallid.player.md  ping.sh  prep.py  reconcile.py  test_completeness.py
gm_llm/: __init__.py  assets.py  cli.py  doctor.py  project.py  scaffold.py
gm_llm/orchestrator/: backend.py  canon.py  completeness.py  gate.py  lifecycle.py  logs.py  loop.py  mock.py  phase.py  planner.py  prompts.py  reconciler.py  scaffold.py  setup.py  status.py  stream.py  textmarkup.py
gm_llm/tui/: __main__.py  app.py  widgets.py
orchestrator/: __init__.py  backend.py  canon.py  completeness.py  gate.py  lifecycle.py  logs.py  loop.py  mock.py  phase.py  planner.py  prompts.py  reconciler.py  scaffold.py  setup.py  stream.py
orchestrator/prompts/: apply-arcs-brief.md  apply-brief.md  apply-state-brief.md  author-brief.md  canon-header.md  check-conduct-brief.md  check-digest-brief.md  check-plan-brief.md  check-propagation-brief.md  check-turn-brief.md  correct-digest.md  correct-turn.md  curate-feedback-brief.md  digest-brief.md  handoff-brief.md  runner-header.md  setup-arc-major-brief.md  setup-arc-minor-brief.md  setup-intake-world-brief.md  setup-kickoff.md  setup-state-brief.md  turn-reminder.md
plugin/: report-findings.ts  task-complete.ts
plugins/: dice-roller.ts  dm-reminder.ts  dm-transcript.ts  turn-gate.ts
skills/apply-arcs/: SKILL.md
skills/apply-canon/: SKILL.md
skills/npc-plan/: SKILL.md
tui/: __init__.py  __main__.py  app.py  screens.py
(+96 files in other folders)
