[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gm-llm"
version = "0.2.0"
description = "An LLM game master for solo, long-form D&D campaigns — over opencode."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13",
    "textual>=0.60",
]

[project.scripts]
gm-llm = "gm_llm.cli:main"

[tool.setuptools]
# One top-level package: the tool (gm_llm) with the engine (gm_llm.orchestrator) and
# UI (gm_llm.tui) beneath it — nothing generic lands in site-packages. dev/ is
# developer tooling and is not shipped.
packages = ["gm_llm", "gm_llm.orchestrator", "gm_llm.tui"]

[tool.setuptools.package-data]
# Runtime data loaded by path, so it must ship in the wheel: the checker/turn prompts,
# and the opencode assets that `gm-llm init` copies.
"gm_llm.orchestrator" = ["prompts/*.md"]
gm_llm = ["assets/opencode/**/*"]
